<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lemontimee.hedefprogramdenemev1.viewmodel.LoginRegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.FragmentLogin">

        <ImageButton
            android:id="@+id/imageButtonBackLogin"
            android:layout_width="49dp"
            android:layout_height="38dp"
            android:background="#F5F5EC"
            android:contentDescription="@string/back_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/icon_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:text="@string/hello_there"
            android:textColor="@color/laci"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.39999998">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:textColorHint="@color/laci"
                app:boxStrokeColor="@color/laci"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/icon_email"
                app:errorEmail="@{viewmodel.emailErrorMLD}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_input_background"
                    android:fontFamily="@font/regular"
                    android:hint="@string/email_adress"
                    android:text="@={viewmodel.emailMLD}"
                    android:inputType="textVisiblePassword"
                    android:textColor="@color/laci">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:textColorHint="@color/laci"
                app:boxStrokeColor="@color/laci"
                app:endIconMode="password_toggle"
                app:startIconDrawable="@drawable/icon_lock"
                app:errorPassword="@{viewmodel.passwordErrorMLD}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_input_background"
                    android:fontFamily="@font/regular"
                    android:hint="@string/password"
                    android:text="@={viewmodel.passwordMLD}"
                    android:inputType="textPassword"
                    android:textColor="@color/laci">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <android.widget.Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_custom"
                    android:fontFamily="@font/regular"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/laci"
                    android:textSize="17sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal"
            android:padding="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="2dp"
                android:fontFamily="@font/regular"
                android:text="@string/forgot_your_password"
                android:textColor="@color/grey" />

            <android.widget.Button
                android:id="@+id/buttonLoginResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="27dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="4dp"
                android:background="#355174"
                android:fontFamily="@font/bold"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="2dp"
                android:text="@string/reset"
                android:textColor="@color/red"
                tools:layout_editor_absoluteX="211dp"
                tools:layout_editor_absoluteY="110dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.13">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="442dp">

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@drawable/line_background">
                </View>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/or"
                    android:textSize="16sp">
                </TextView>

                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="6dp"
                    android:background="@drawable/line_background">
                </View>
            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/buttonLoginGoogle"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center">
            </com.google.android.gms.common.SignInButton>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>