<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.lemontimee.hedefprogramdenemev1.viewmodel.LoginRegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".view.FragmentForgotPassword">

        <ImageButton
            android:id="@+id/imageButtonBackForgot"
            android:layout_width="49dp"
            android:layout_height="38dp"
            android:background="#F5F5EC"
            android:contentDescription="@string/back_button"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/icon_back_arrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.456">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:textColorHint="@color/laci"
                app:boxStrokeColor="@color/laci"
                app:endIconMode="clear_text"
                app:errorEmail="@{viewmodel.emailErrorMLD}"
                app:startIconDrawable="@drawable/icon_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextForgotEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_input_background"
                    android:fontFamily="@font/regular"
                    android:hint="@string/email_adress"
                    android:inputType="textVisiblePassword"
                    android:text="@={viewmodel.emailMLD}"
                    android:textColor="@color/laci">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <android.widget.Button
                android:id="@+id/buttonForgotResetPassword"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:background="@drawable/button_custom_4"
                android:contentDescription="@string/reset_password"
                android:fontFamily="@font/regular"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/laci"
                android:textSize="17sp" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarResetPassword"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="240dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>